# hacker-new-apis-task

./: Dockerfile  README.md  pyproject.toml
src/: cli.py  main.py
src/controllers/: serviecs.py
src/core/: config.py
src/database/: connect.py
src/middleware/: logging.py
src/routes/: hacker_news.py  home.py
test/: test_hacker_news.py  test_home.py
